--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "Preston Perriott",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
+    "monk": "^6.0.6",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
