--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "monk": "^6.0.6",
