--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "monk": "^6.0.6",
+    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
